BusesAddressTicket single

--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -51,3 +51,16 @@
 .mat-expansion-panel-header {
     padding-inline-start: 16px;
 }
+
+.mat-expansion-panel {
+    box-shadow: none !important;
+}
+
+
+::ng-deep {
+    .mat-expansion-panel-content {
+        .mat-expansion-panel-body {
+            padding: 0 !important;
+        }
+    }
+}
