--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid h-100">
     <div class="row justify-content-center align-items-center text-center h-100">
         <div class="col-md-4 col-12 p-5 bg-white container-border">
-            <img src="assets/images/logo.jpg" loading="lazy" alt="img" class="img-fluid">
+            <img src="assets/images/logo.jpg" loading="lazy" alt="img" class="img-fluid mb-3">
             <form [formGroup]="form" novalidate (ngSubmit)="login()" class="col-12 px-0">
                 <mat-form-field class="w-100">
                     <mat-label>Email</mat-label>
