--- a/src/app/admin/address/address.component.html
+++ b/src/app/admin/address/address.component.html
@@ -1,1 +1,48 @@
-<p>address works!</p>
+<div class="container-fluid table-container">
+    <div class="row mx-0 my-3">
+      <button color="primary" mat-raised-button (click)="add()">
+        {{'address.add' | translate}}
+      </button>
+    </div>
+  
+    <div *ngIf="dataSource.data.length > 0; else emptyData" class="mat-elevation-z8">
+      <div class="table-content">
+        <table mat-table [dataSource]="dataSource">
+          <ng-container matColumnDef="arName">
+            <th mat-header-cell *matHeaderCellDef>{{'common.arName' | translate}}</th>
+            <td mat-cell *matCellDef="let element">{{element.arName}}</td>
+          </ng-container>
+      
+          <ng-container matColumnDef="enName">
+            <th mat-header-cell *matHeaderCellDef>{{'common.enName' | translate}}</th>
+            <td mat-cell *matCellDef="let element">{{ element.enName }}</td>
+          </ng-container>
+  
+          <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef>  </th>
+            <td mat-cell *matCellDef="let element">
+                <div class="d-flex">
+                    <button mat-icon-button color="primary" (click)="update(element)">
+                        <mat-icon>edit</mat-icon>
+                    </button>
+                    <button mat-icon-button color="warn" (click)="delete(element)">
+                        <mat-icon>delete</mat-icon>
+                    </button>
+                </div>
+            </td>
+        </ng-container>
+  
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      </div>
+      
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons [length]="dataSource.data.length"></mat-paginator>
+    </div>
+  </div>
+  
+  <ng-template #emptyData>
+    <app-empty-data></app-empty-data>
+  </ng-template>
+  
+    
