--- a/src/app/admin/buses/buses.component.html
+++ b/src/app/admin/buses/buses.component.html
@@ -9,8 +9,8 @@
       <div class="table-content">
         <table mat-table [dataSource]="dataSource">
           <ng-container matColumnDef="arName">
-            <th mat-header-cell *matHeaderCellDef>{{'common.enName' | translate}}</th>
-            <td mat-cell *matCellDef="let element">{{element.enName}}</td>
+            <th mat-header-cell *matHeaderCellDef>{{'common.arName' | translate}}</th>
+            <td mat-cell *matCellDef="let element">{{element.arName}}</td>
           </ng-container>
       
           <ng-container matColumnDef="enName">
