--- a/src/app/shared/components/confirm-delete/confirm-delete.component.html
+++ b/src/app/shared/components/confirm-delete/confirm-delete.component.html
@@ -7,7 +7,7 @@
 <div mat-dialog-content>
     <div class="px-0 py-3">
         <div>Are you sure you want to delete this item ?</div>
-        <div class="font-weight-bold pt-2"> {{data.name}} </div>
+        <div class="font-weight-bold pt-2"> {{itemName}} </div>
     </div>
 </div>
 
