--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,19 +4,21 @@
 
 <!-- <app-info></app-info> -->
 
-<div class="container mt-3 px-0 container-border">
-    <div class="col-12 px-0">
-        <mat-tab-group class="w-100" [selectedIndex]="selectedTabIndex" (selectedIndexChange)="onTabChanged($event)">
-            <mat-tab [label]="'home.individualBooking' | translate">
-                <ng-container *ngIf="selectedTabIndex < 1">
-                    <app-ticket [type]="ticketType.individual"></app-ticket>
-                </ng-container>
-            </mat-tab>
-            <mat-tab [label]="'home.groupBooking' | translate">
-                <ng-container *ngIf="selectedTabIndex > 0">
-                    <app-ticket [type]="ticketType.group"></app-ticket>
-                </ng-container>
-            </mat-tab>
-        </mat-tab-group>
+<div class="container px-0">
+    <div class="d-flex justify-content-center mt-3">
+        <div class="col-md-8 col-12 px-0 container-border">
+            <mat-tab-group class="w-100" [selectedIndex]="selectedTabIndex" (selectedIndexChange)="onTabChanged($event)">
+                <mat-tab [label]="'home.individualBooking' | translate">
+                    <ng-container *ngIf="selectedTabIndex < 1">
+                        <app-ticket [type]="ticketType.individual"></app-ticket>
+                    </ng-container>
+                </mat-tab>
+                <mat-tab [label]="'home.groupBooking' | translate">
+                    <ng-container *ngIf="selectedTabIndex > 0">
+                        <app-ticket [type]="ticketType.group"></app-ticket>
+                    </ng-container>
+                </mat-tab>
+            </mat-tab-group>
+        </div>
     </div>
 </div>
