--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,8 @@ html {
 body {
   background-color: #ECEFEF !important;
   height: 100%;
+  width: 100%;
+  overflow: hidden;
 }
 
 [lang="ar"]body {
