--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
 
 <div class="container px-0">
     <div class="d-flex justify-content-center mt-3">
-        <div class="col-md-8 col-12 px-0 container-border">
+        <div class="col-md-9 col-12 px-0 container-border">
             <mat-tab-group class="w-100" [selectedIndex]="selectedTabIndex" (selectedIndexChange)="onTabChanged($event)">
                 <mat-tab [label]="'home.individualBooking' | translate">
                     <ng-container *ngIf="selectedTabIndex < 1">
@@ -15,6 +15,14 @@
                 </mat-tab>
                 <mat-tab [label]="'home.groupBooking' | translate">
                     <ng-container *ngIf="selectedTabIndex > 0">
+                        <div class="alert alert-info">
+                            <div>
+                                {{'common.childInfo' | translate}}
+                            </div>
+                            <div>
+                                {{'common.adultInfo' | translate}}
+                            </div>
+                        </div>
                         <app-ticket [type]="ticketType.group"></app-ticket>
                     </ng-container>
                 </mat-tab>
