--- a/src/app/shared/components/confirm-delete/confirm-delete.component.html
+++ b/src/app/shared/components/confirm-delete/confirm-delete.component.html
@@ -1,22 +1,22 @@
 <div mat-dialog-title class="d-flex justify-content-between align-content-center">
-    <div class="font-weight-bold">Confirm Delete</div>
+    <div class="font-weight-bold">{{'common.confirmDelete' | translate}}</div>
     <button class="p-0 d-flex justify-content-center align-items-center" (click)="cancel()">
         <mat-icon>close</mat-icon>
     </button>
 </div>
 <div mat-dialog-content>
     <div class="px-0 py-3">
-        <div>Are you sure you want to delete this item ?</div>
+        <div>{{'common.sureToDelete' | translate}}</div>
         <div class="font-weight-bold pt-2"> {{itemName}} </div>
     </div>
 </div>
 
 <div mat-dialog-actions>
     <button mat-stroked-button type="button" color="primary" (click)="cancel()">
-        Cancel
+        {{'common.cancel' | translate}}
     </button>
     <button mat-flat-button color="warn" [mat-dialog-close]="true" (click)="delete()" cdkFocusInitial>
-        Delete 
+        {{'common.yes' | translate}}
     </button>
 </div>
 
