Enhancement book ticket scroll

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,8 +4,8 @@
 
 <!-- <app-info></app-info> -->
 
-<div class="container px-0">
-    <div class="d-flex justify-content-center mt-3">
+<div class="container h-100 mt-3 px-0">
+    <div class="d-flex justify-content-center">
         <div class="col-md-9 col-12 px-0 container-border">
             <mat-tab-group class="w-100" [selectedIndex]="selectedTabIndex" (selectedIndexChange)="onTabChanged($event)">
                 <mat-tab [label]="'home.individualBooking' | translate">
