--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,7 +19,7 @@ html {
 
 body {
   background-color: #ECEFEF !important;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   overflow: hidden;
 }
