--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,6 +22,9 @@
                             <div>
                                 {{'common.adultInfo' | translate}}
                             </div>
+                            <div>
+                                {{'common.maximumPersons' | translate}}
+                            </div>
                         </div>
                         <app-ticket [type]="ticketType.group"></app-ticket>
                     </ng-container>
