--- a/src/styles.scss
+++ b/src/styles.scss
@@ -171,7 +171,7 @@ button:focus {
 @media(min-width: 960px) {
   .container-border {
     border-radius: 10px;
-    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+    // box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
     border: 0.5px solid #ccc;
   }
 }
