--- a/src/app/admin/all-subscriptions/all-subscriptions.component.html
+++ b/src/app/admin/all-subscriptions/all-subscriptions.component.html
@@ -1,1 +1,49 @@
-<p>all-subscriptions works!</p>
+<div class="container-fluid table-container">
+    <div *ngIf="dataSource.data.length > 0; else emptyData" class="mat-elevation-z8 mt-3">
+      <div class="table-content">
+        <table mat-table [dataSource]="dataSource">
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef>{{'common.name' | translate}}</th>
+            <td mat-cell *matCellDef="let element" class="col-3">{{element.name}}</td>
+          </ng-container>
+      
+          <ng-container matColumnDef="mobile">
+            <th mat-header-cell *matHeaderCellDef>{{'common.mobile' | translate}}</th>
+            <td mat-cell *matCellDef="let element" class="w-100">{{ element.mobile }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="birthDate">
+            <th mat-header-cell *matHeaderCellDef>{{'common.mobile' | translate}}</th>
+            <td mat-cell *matCellDef="let element" class="w-100">{{ element.mobile }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="age">
+            <th mat-header-cell *matHeaderCellDef>{{'common.mobile' | translate}}</th>
+            <td mat-cell *matCellDef="let element" class="w-100">{{ element.mobile }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="room">
+            <th mat-header-cell *matHeaderCellDef>{{'common.mobile' | translate}}</th>
+            <td mat-cell *matCellDef="let element" class="w-100">{{ element.mobile }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef>{{'common.mobile' | translate}}</th>
+            <td mat-cell *matCellDef="let element" class="w-100">{{ element.mobile }}</td>
+          </ng-container>
+  
+  
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      </div>
+      
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons [length]="dataSource.data.length"></mat-paginator>
+    </div>
+  </div>
+  
+  <ng-template #emptyData>
+    <app-empty-data></app-empty-data>
+  </ng-template>
+  
+    
